# tsumugi

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: bench.yml  ci.yml  train_setfit.yml  train_setfit_pr.yml
benches/: .gitignore
benches/runner/: Cargo.toml
benches/runner/src/: health.rs  main.rs  metrics.rs  report.rs  suite.rs
benches/runner/src/adapters/: common.rs  longmemeval.rs  memoryagentbench.rs  mod.rs  ruler.rs
benches/scripts/: compare_snapshot.sh  download_datasets.sh  download_distilbart.sh  download_llmlingua2.sh  download_models.sh  install_llama_cpp.sh  resolve_e5_paths.sh  start_llama_server.sh  wait_for_health.sh
docs/: TODO.md  ci-benchmark-integration-plan.md  concept.md  evaluation-datasets.md  llm-free-stack-plan.md  monetization-strategy.md  runtime-environment.md  tech-architecture.md
docs/research/: 2026-04-model-landscape.md  context-management-survey.md
models/: tsumugi.als
models/setfit/: all-MiniLM-L6-v2-default.head.json  all-MiniLM-L6-v2-default.onnx
models/setfit-training/: README.md  holdout.jsonl  queries.jsonl
models/tsumugi/: core.als  creative.als
scripts/: regen.sh  train_setfit.py
tsumugi-cli/: Cargo.toml
tsumugi-cli/src/: main.rs
tsumugi-core/: Cargo.toml
tsumugi-core/src/: creative.rs  domain.rs  lib.rs  traits.rs
tsumugi-core/src/classifier/: bert_classifier.rs  mod.rs  regex_classifier.rs  setfit_classifier.rs
tsumugi-core/src/compiler/: mod.rs
tsumugi-core/src/compressor/: llm_delegation.rs  llm_lingua.rs  llm_lingua_v2.rs  mod.rs  selective_context.rs  truncate.rs
tsumugi-core/src/creative/: character.rs  ids.rs  lore.rs  mod.rs  scene.rs  style.rs
tsumugi-core/src/detector/: cascade.rs  embedding_similarity.rs  keyword.rs  llm_classifier.rs  mod.rs  nli_zero_shot.rs
tsumugi-core/src/domain/: chunk.rs  fact.rs  ids.rs  mod.rs  pending.rs  source_location.rs  summary.rs
tsumugi-core/src/providers/: ike_embedding.rs  mock_embedding.rs  mock_llm.rs  mod.rs  onnx_embedding.rs  stubs.rs
tsumugi-core/src/retriever/: bm25.rs  cosine.rs  hybrid.rs  mod.rs  tokenizer.rs
tsumugi-core/src/scorer/: chapter_order.rs  composite.rs  file_proximity.rs  mod.rs  no_decay.rs  temporal_decay.rs
tsumugi-core/src/storage/: in_memory.rs  mod.rs  sqlite.rs
tsumugi-core/src/summarizer/: extractive_bm25.rs  hierarchical.rs  llm.rs  mod.rs  protection.rs
tsumugi-core/src/summarizer/distilbart/: inference.rs  mod.rs
tsumugi-core/src/traits/: classifier.rs  compressor.rs  detector.rs  embedding.rs  llm.rs  mod.rs  retriever.rs  scorer.rs  storage.rs  summarizer.rs
tsumugi-core/tests/: coding_scenario.rs  hierarchical_summary_pipeline.rs  novel_scenario.rs  sqlite_persistence.rs
tsumugi-ts/: package.json  tsconfig.json
tsumugi-ts/src/: index.ts
tsumugi-ts/src/creative/: index.ts
tsumugi-ts/src/domain/: chunk.ts  fact.ts  ids.ts  index.ts  pending.ts  source-location.ts  summary.ts
tsumugi-ts/src/tauri/: index.ts  invoke.ts
tsumugi-ts/tests/: domain.test.ts  tauri.test.ts
