[workspace]
resolver = "2"
members = [
    "tsumugi-core",
    "tsumugi-cli",
    "benches/runner",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/penta2himajin/tsumugi"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
