[package]
name = "tsumugi-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "General-purpose memory-layer framework for LLM applications — core library"
publish = false

[features]
default = []
# Enable reqwest-backed OpenAI-compatible LLM and LM Studio embedding providers.
network = ["dep:reqwest"]
# Enable sqlx + SQLite persistence (`SqliteStorage`).
sqlite = ["dep:sqlx"]
# Enable ONNX-backed embedding provider (`OnnxEmbedding`).
# Phase 4-α Step 1 では trait 面のみ先行追加 (実 ort 統合は並行作業)。
# 詳細は `docs/ci-benchmark-integration-plan.md` 参照。
onnx = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

reqwest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
