[package]
name = "tsumugi-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CI benchmark runner for tsumugi-core (LongMemEval / MemoryAgentBench / RULER)"
publish = false

[[bin]]
name = "tsumugi-bench"
path = "src/main.rs"

[features]
# Default keeps the runner buildable without HTTP / ONNX wiring so that
# `cargo build -p tsumugi-bench` succeeds in any environment. The CI bench
# job enables both: `cargo build -p tsumugi-bench --features "network,onnx"`.
# `--suite health` 等の LLM 経路は `network` が必須。未指定時は明示的に
# bail させる (LmStudioEmbedding と同じパターン)。
default = []
network = ["tsumugi-core/network"]
onnx = ["tsumugi-core/onnx"]

[dependencies]
tsumugi-core = { path = "../../tsumugi-core" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
wiremock.workspace = true
